--- a/package.json
+++ b/package.json
@@ -3,21 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "@react-three/drei": "^9.109.1",
+    "@react-three/fiber": "^8.16.8",
+    "@types/three": "^0.167.0",
+    "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
+    "next": "14.2.5",
+    "raw-loader": "^4.0.2",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^9",
