--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "next": "14.2.5",
     "raw-loader": "^4.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three-custom-shader-material": "^6.2.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
