--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.109.1",
     "@react-three/fiber": "^8.16.8",
+    "@react-three/postprocessing": "^2.19.1",
     "@types/three": "^0.167.0",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
