--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "glslify": "^7.1.1",
     "leva": "^0.10.0",
     "next": "15.2.0",
+    "r3f-perf": "^7.2.3",
     "raw-loader": "^4.0.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
